add_getUser_end_point
